--- a/src/components/QueryInput/QueryInput.css
+++ b/src/components/QueryInput/QueryInput.css
@@ -11,12 +11,12 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    width: 70%;
-    margin-right: 5%;
+    width: 100%;
 }
 .code-mirror-wrapper
 {
     border: 1px solid blue;
+    border-radius: 5px;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
