--- a/src/components/TabBar/TabBar.css
+++ b/src/components/TabBar/TabBar.css
@@ -6,5 +6,5 @@
 }
 .tabs{
     display: flex;
-    width: 20%;
+    width: 10%;
 }
